--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
 </head>
 <body>
 
+  <ul class="list-group-inline">
+    <li class="center-text">
+      <a class="block" href="#">
+        <i class="icon i-96">
+          <svg><use xlink:href="images/dino-icons.svg#brachiosaurus" /></svg>
+        </i>
+        <span class="block icon-text">Brachiosaurus</span>
+      </a>
+    </li>
+
+    <li class="center-text">
+      <a class="block" href="#">
+        <i class="icon i-96">
+          <svg><use xlink:href="images/dino-icons.svg#micropachyephalosaurus" /></svg>
+        </i>
+        <span class="block icon-text">Micropachyephalosaurus</span>
+      </a>
+    </li>
+  </ul>
 </body>
 </html>
