--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Dino Icons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -22,11 +22,21 @@
     <li class="center-text">
       <a class="block" href="#">
         <i class="icon i-96">
-          <svg><use xlink:href="images/dino-icons.svg#micropachyephalosaurus" /></svg>
+          <svg><use xlink:href="images/dino-icons.svg#micropachycephalosaurus" /></svg>
         </i>
-        <span class="block icon-text">Micropachyephalosaurus</span>
+        <span class="block icon-text">Micropachycephalosaurus</span>
       </a>
     </li>
+
+    <li class="center-text">
+      <a class="block" href="#">
+        <i class="icon i-96">
+          <svg><use xlink:href="images/dino-icons.svg#velociraptor" /></svg>
+        </i>
+        <span class="block icon-text">Velociraptor</span>
+      </a>
+    </li>
+
   </ul>
 </body>
 </html>
